# csvfilter

./: CMakeLists.txt  LICENSE  README.md  valgrind.suppressions
cmake/Modules/: FindPopt.cmake
doxygen/: Doxyfile.in  mainpage.dox
man/man1/: csvfilter.1.in
perfTest/: perfTest.in
src/app/: application.cc  application.h  cmdOptions.cc  cmdOptions.h  configure.h.in  field.cc  field.h  fileReader.cc  fileReader.h  headers.cc  headers.h  lineParser.cc  lineParser.h  main.cc
src/app/filterExpression/: binaryOperator.cc  binaryOperator.h  expression.cc  expression.h  lexToken.cc  lexToken.h  lexer.cc  lexer.h  operand.cc  operand.h  parseError.cc  parseError.h  parseTree.cc  parseTree.h  unaryOperator.cc  unaryOperator.h  variant.cc  variant.h
src/test/: cmdOptions.cc  field.cc  headers.cc  lineParser.cc  main.cc  test.cc  test.h
src/test/filterExpression/: expression.cc  lexer.cc
test/: appTest.in
test/badFilter/: cmdArgs  error
test/filter/: cmdArgs  input.csv  output.csv
test/filter2/: cmdArgs  output.csv
test/headers/: cmdArgs  input.csv  output.csv
test/quotes/: cmdArgs  input.csv  output.csv
test/selectSingleCol/: cmdArgs  input.csv  output.csv
test/shortLine/: error  input.csv
test/simple/: input.csv
test/unparsableFilter/: cmdArgs  error
